--- a/TestUnitarios/TestUnitarios.csproj
+++ b/TestUnitarios/TestUnitarios.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net4.5.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Clases\Clases.csproj" />
+    <ProjectReference Include="..\..\..\..\Desktop\UI AGILES\Ahorcado\Ahorcado\Ahorcado.csproj" />
+    <ProjectReference Include="..\Clases\Ahorcado.csproj" />
   </ItemGroup>
 
 </Project>
