--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['4.5.x']
+        dotnet-version: ['4.5.2']
 
     steps:
       - uses: actions/checkout@v2
